# productInfoAgent

./: .env  LICENSE  README.md  agent.py  agent_with_mcp.py  config.py  image_loader_agent.py  interactive_runner.py  logger.py  policy.json  pyproject.toml  requirements.txt  start.bat  start.sh  stop.bat  stop.sh
clamav-mcp/: Dockerfile  README.md  clamav_mcp_server.py  clamd.conf  docker-compose.yml  mcp_client.py
sub_agents/gcp_upload/: gcp_upload_agent.py
sub_agents/gcp_upload/tools/: gcp_upload_tool.py
sub_agents/marketing/: marketing_agent.py
sub_agents/marketing/tools/: marketing_tool.py
sub_agents/scoring/: scoring_agent.py
sub_agents/scoring/tools/: scoring_tool.py
sub_agents/virus_scan/: virus_scan_agent.py
sub_agents/virus_scan/tools/: virus_scan_tool.py
sub_agents/vision_analysis/: vision_analysis_agent.py
sub_agents/vision_analysis/tools/: vision_analysis_tool.py
tools/: load_image_tool.py  loop_condition_tool.py
